--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@
 /out/production/SeeWarServer/Server.class
 /out/production/SeeWarServer/ServerGamer.class
 /out/production/SeeWarServer/ServerGames.class
+/.idea/workspace.xml
